# egui-multinode

./: .gitignore  .gitmodules  Cargo.toml  README.md  egui-multinode-7178eccd0f6718e7.js  egui-multinode-7178eccd0f6718e7_bg.wasm  index.html  justfile  rust-toolchain
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
crates/multinode-web/: Cargo.toml
crates/multinode-web/src/: file_dialog.rs  lib.rs  platform.rs
src/: app.rs  lib.rs  main.rs  style.rs
src/app/: backend_panel.rs  native.rs  platform.rs  style.rs  web.rs
src/app/backend_panel/: file_dialog.rs  login.rs  unlock.rs
src/app/backend_panel/file_dialog/: native.rs
src/app/platform/: native.rs  web.rs
