[workspace]
members = ["crates/multinode-web"]

[workspace.dependencies]
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
  "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[package]
name = "egui-multinode"
version = "0.1.1"
authors = ["Doug Anderson <doug@peerpiper.io>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.80"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = { workspace = true }
eframe = { workspace = true }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"], workspace = true }

# logging 
tracing = { workspace = true }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = [
  "time",
  "rt",
  "macros",
  "sync",
  "rt-multi-thread",
] }
peerpiper-plugins = { git = "https://github.com/PeerPiper/peerpiper.git" }
rfd = "0.13" # Rust File Dialog 

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
multinode-web = { path = "crates/multinode-web" }
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"                                 # to access the DOM (to hide the loading text)
tracing-subscriber = { version = "0.3" }
tracing-wasm = { version = "0.2.1" }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 2 # fast and small wasm
# lto = true               # Link Time Optimization
# codegen-units = 1        # allow for maximum size reduction optimizations
# strip = true             # Automatically strip symbols from the binary.
# panic = 'abort'          # Abort on panic
# debug = false
# debug-assertions = false
# overflow-checks = false
# incremental = false
# rpath = false


# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
