[package]
name = "multinode-web"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui = { workspace = true }
eframe = { workspace = true, default-features = false, features = [
  "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }

serde = { workspace = true }

web-sys = { version = "0.3", features = ["FileReader"] }
